# Akyla_Aquino_Desafio

./: Readme.md  main.ipynb  model.ipynb  pyproject.toml  requirements.txt
data/gold/: final_data.csv  final_data_normalized.csv
data/silver/: school_data.csv  student_data.csv
